# riyadhMap

./: .gitignore  README.md  app.py  env.py  hello.py  map_search.py  places.json  pyproject.toml  requirements.txt
assets/: search_enter.js  styles.css
utils/: gemini_nano.py  google_places.py  google_services.py  scraper.py  utils.py
