[project]
name = "ruhentmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.5.0",
    "langchain-community>=0.3.5",
    "langchain-google-genai>=2.0.4",
    "langchain>=0.3.7",
    "plotly>=5.24.1",
    "pymongo>=4.10.1",
]
